tests/algorithms/x/Scala/web_programming/covid_stats_via_xpath.error
exit status 1
/workspace/mochi/tests/algorithms/x/Scala/web_programming/covid_stats_via_xpath.scala:114: error: overloaded method value apply with alternatives:
  (x: java.math.BigInteger)scala.math.BigInt <and>
  (x: String)scala.math.BigInt <and>
  (x: Array[Byte])scala.math.BigInt <and>
  (l: Long)scala.math.BigInt <and>
  (i: Int)scala.math.BigInt
 cannot be applied to (scala.math.BigInt)
  return CovidData(nums.lift((BigInt(0).toInt).toInt).getOrElse(BigInt(BigInt(0))), nums.lift((BigInt(1).toInt).toInt).getOrElse(BigInt(BigInt(0))), nums.lift((BigInt(2).toInt).toInt).getOrElse(BigInt(BigInt(0))))
                                                                ^
/workspace/mochi/tests/algorithms/x/Scala/web_programming/covid_stats_via_xpath.scala:114: error: overloaded method value apply with alternatives:
  (x: java.math.BigInteger)scala.math.BigInt <and>
  (x: String)scala.math.BigInt <and>
  (x: Array[Byte])scala.math.BigInt <and>
  (l: Long)scala.math.BigInt <and>
  (i: Int)scala.math.BigInt
 cannot be applied to (scala.math.BigInt)
  return CovidData(nums.lift((BigInt(0).toInt).toInt).getOrElse(BigInt(BigInt(0))), nums.lift((BigInt(1).toInt).toInt).getOrElse(BigInt(BigInt(0))), nums.lift((BigInt(2).toInt).toInt).getOrElse(BigInt(BigInt(0))))
                                                                                                                                 ^
/workspace/mochi/tests/algorithms/x/Scala/web_programming/covid_stats_via_xpath.scala:114: error: overloaded method value apply with alternatives:
  (x: java.math.BigInteger)scala.math.BigInt <and>
  (x: String)scala.math.BigInt <and>
  (x: Array[Byte])scala.math.BigInt <and>
  (l: Long)scala.math.BigInt <and>
  (i: Int)scala.math.BigInt
 cannot be applied to (scala.math.BigInt)
  return CovidData(nums.lift((BigInt(0).toInt).toInt).getOrElse(BigInt(BigInt(0))), nums.lift((BigInt(1).toInt).toInt).getOrElse(BigInt(BigInt(0))), nums.lift((BigInt(2).toInt).toInt).getOrElse(BigInt(BigInt(0))))
                                                                                                                                                                                                  ^
three errors found
